<resources>
    <string name="app_name">Share&amp;Care</string>
    <string name="EnterUserName">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Log In</string>
    <string name="SignIn">Sign In</string>
    <string name="Reenter_Password">Re-enter Password</string>
    <string name="Name">Username</string>
    <string name="Location">Enter Location</string>
    <string name="Mobile">Mobile:</string>
    <string name="LogIn">Log In</string>
    <string name="Agree">I agree to the term and policy</string>
    <string name="OK">OK</string>
    <string name="Owner_Type">Type Of User</string>
    <string name="Email_Address">Enter E-mail Address</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Contact">Enter Contact Number</string>
    <string name="title_activity_post">Post</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_post__nav">Post_Nav</string>
    <string name="title_activity_tab_infos">Tab_infos</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hnt_et_location">Name of Place to Search</string>
    <string name="str_btn_find">Find</string>
    <string name="title_activity_maps">Map</string>
</resources>
